# novabucks

./: .gitignore  .gitlab-ci.yml  README.md  pyproject.toml  tox.ini
.github/workflows/: ci.yml  release.yml
docs/superpowers/plans/: 2026-06-18-novabucks-cli-skeleton.md
docs/superpowers/specs/: 2026-06-18-novabucks-cli-skeleton-design.md
src/novabucks/: __init__.py  __main__.py  cli.py  constants.py  maven.py  oras_client.py  radas_sign.py  workflows.py
src/novabucks/utils/: archive.py  files.py  logs.py  storage.py  strings.py
tests/: test_cli.py  test_extract_zip_files.py  test_radas_config.py  test_radas_receiver.py  test_radas_sign_generation.py  test_radas_sign_sender.py
