[build-system]
requires = ["setuptools>=78.1.1"]
build-backend = "setuptools.build_meta"

[project]
name = "novabucks"
version = "0.1.3"
description = "CLI tool for signing Maven artifacts"
requires-python = ">=3.11"
license = "Apache-2.0"
dependencies = [
    "click>=8.0",
    "defusedxml>=0.7.0",
    "jinja2>=3.0",
    "oras>=0.1.0",
    "python-qpid-proton>=0.31.0",
]

[dependency-groups]
dev = [
    "pytest>=7.0",
    "ruff>=0.4",
]

[project.scripts]
novabucks = "novabucks.cli:main"

[tool.uv]
default-groups = ["dev"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
